@@ -5,7 +5,10 @@ default(realprecision,38);
 do(2)
 default(realprecision,211);
 do(1e14)
-do(y)=my(x = lambertw(y)); if (normlp(Vec(exp(x)*x - y)) > 1e-38, error(y));
+do(y)=
+{ my(x = lambertw(y), e = normlp(Vec(exp(x)*x - y)));
+  if (e > 5e-38, error([e, y]));
+}
 default(realprecision,38);
 do(O(x^10))
 do(O(x^30))
@@ -14,6 +17,7 @@ do(3+O(x^30))
 do(x)
 do(x+O(x^10))
 do(x+O(x^30))
+do(3+O(x))
 do(3+x)
 do(3+x+O(x^10))
 do(3+x+O(x^30))
